--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <li><a href=""><img src="assets/dubai name in design.svg" alt="" class="img1"></a></li>
                     <li><a href="">Explore Dubai<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="">Things to do<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Eat & Drink<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">What's on<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Plan your trip<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Deals & Offers<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Dubai Calender<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Yash-Links/food.html">Eat & Drink<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Yash-Links/spas.html">What's on<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Yash-Links/hotels.html">Plan your trip<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Yash-Links/adventure.html">Deals & Offers<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Yash-Links/live-show.html">Dubai Calender<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                 </ul>
             </div>
             <div class="label_div_rightpart">
@@ -454,7 +454,7 @@
                             <i class="fa-regular fa-heart icon-2"></i>
                         </button>
                         <h4>DESERT</h4>
-                        <a href="/">Arabian Adventures</a>
+                        <a href="./Yash-Links/desert.html">Arabian Adventures</a>
                         <p>Conquer the dunes with top-rated tours</p>
                         <h5>7,368 REVIEWS</h5>
                     </div>
@@ -468,7 +468,7 @@
                             <i class="fa-regular fa-heart icon-2"></i>
                         </button>
                         <h4>ADVENTURE</h4>
-                        <a href="/">Aventura Parks</a>
+                        <a href="./Yash-Links/adventure.html">Aventura Parks</a>
                         <p>Swing from the branches at this tree-top adventure park</p>
                         <h5>278 REVIEWS</h5>
                     </div>
@@ -482,7 +482,7 @@
                             <i class="fa-regular fa-heart icon-2"></i>
                         </button>
                         <h4>DESERT</h4>
-                        <a href="/">Platinum Heritage</a>
+                        <a href="./Yash-Links/desert.html">Platinum Heritage</a>
                         <p>Embark on an authentic desert adventure done in style</p>
                         <h5>5,985 REVIEWS</h5>
                     </div>
