commited by jeet

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Visit Dubai - Official Tourism Board in Dubai</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <!-- up-button by Yash -->
-    <button class="up-btn">
+    <button class="up-btn animate__animated animate__backInUp">
         <a href="#navbar">
             <i class="fa-solid fa-arrow-up"></i>
         </a>
@@ -59,8 +63,8 @@
             <div class="label_div_leftpart">
                 <ul>
                     <li><a href=""><img src="/assets/dubai name in design.svg" alt="" class="img1"></a></li>
-                    <li><a href="">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Jeet-links/Things-to-do/Things.html">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="">Eat & Drink<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="">What's on<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="">Plan your trip<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
@@ -148,7 +152,7 @@
                 </div>
             </div>
             <div class="cards-container-1">
-                <div class="cards-1">
+                <div class="cards-1 ">
                     <div class="image-1">
                         <img src="./Yash-Assets/live-show.59&cw=500&ch=375" alt="live-show">
                     </div>
@@ -246,7 +250,7 @@
                             <i class="fa-regular fa-heart icon-2"></i>
                         </button>
                     </div>
-                    <a href="/">Things to do in Dubai</a>
+                    <a href="./Jeet-links/Things-to-do/Things.html">Things to do in Dubai</a>
                     <p>5 MIN READ</p>
                 </div>
                 <div class="cards-2">
@@ -276,7 +280,7 @@
                             <i class="fa-regular fa-heart icon-2"></i>
                         </button>
                     </div>
-                    <a href="/">Top observation decks in Dubai</a>
+                    <a href="./Jeet-links/Explore-dubai/Explore-dubai.html">Top observation decks in Dubai</a>
                     <p>2 MIN READ</p>
                 </div>
             </div>
@@ -834,11 +838,12 @@
                   </li>
               </ul>
           </div>
+          
             <div class="column">
               <h3>Popular Links</h3>
               <ul>
                 <li><a href="Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai</a></li>
-                <li><a href="">Things's to do</a></li>
+                <li><a href="Jeet-links/Things-to-do/Things.html">Things's to do</a></li>
                 <li><a href="">What's on</a></li>
                 <li><a href="">Articles</a></li>
                 <li><a href="">Places to visit</a></li>
