--- a/Jeet-links/privacy/privacy.html
+++ b/Jeet-links/privacy/privacy.html
@@ -5,8 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Notice</title>
     <link rel="stylesheet" href="privacy.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <nav class="navbar" id="navbar">
+
+
+    <!-- first navbar ............ -->
+    <div class="upperpart">
+    <div class="leftside">
+        <ul class="leftlist">
+            <li><a href="">Visit Dubai</a></li>
+            <li><a href="">Invest In Dubai</a></li>
+            <li><a href="">Travel Trade</a></li>
+            <li><a href="">Study Dubai</a></li>
+            <li><a href="">Mice</a></li>
+            <li><a href="">Retire In Dubai</a></li>
+            <li><a href="">Dubai Det</a></li>
+        </ul>
+    </div>
+    <div class="rightside">
+        <ul class="rightlist">
+            <li>
+                <button class="btn1">AA+</button>
+            </li>
+            <li>
+                <img src="/assets/login logo.svg" alt="Login Icon">
+                <span class="login"><a href="">Login</a></span>
+            </li>
+            <li>
+                <img src="/assets/globe symbol.svg" alt="Globe Icon">
+                <span class="globe"><a href="">English</a></span>
+            </li>
+        </ul>
+    </div>
+</div>
+        <!-- label div starts here.................. -->
+
+    <div class="lowerpart">
+        <div class="label_div">
+            <div class="label_div_leftpart">
+                <ul>
+                    <li><a href=""><img src="/assets/dubai name in design.svg" alt="" class="img1"></a></li>
+                    <li><a href="../Explore-dubai/Explore-dubai.html">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="../Things-to-do/Things.html">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Eat & Drink<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">What's on<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Plan your trip<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Deals & Offers<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Dubai Calender<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                </ul>
+            </div>
+            <div class="label_div_rightpart">
+                <ul>
+                    <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="icon-nav-bar s174epxq"><path fill="#0067b9" fill-rule="nonzero" d="M22.021 20.611l-4.83-4.83a8.51 8.51 0 1 0-1.41 1.41l4.83 4.83 1.41-1.41zm-18-10.09a6.5 6.5 0 1 1 6.5 6.5 6.51 6.51 0 0 1-6.5-6.5z"></path></svg></a></li>
+                    <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="icon-nav-bar s1cxr9xh"><path d="M20,4H18V2H16V4H8V2H6V4H4A2,2,0,0,0,2,6V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V6A2,2,0,0,0,20,4Zm0,16H4V12H20Zm0-10H4V6H6V8H8V6h8V8h2V6h2Z" transform="translate(-2 -2)"></path></svg></a></li>
+                    <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18" class="fav-heart icon-nav-bar sq69x8x"></svg><svg xmlns="http://www.w3.org/2000/svg" width="19.972" height="17.753" viewBox="0 0 19.972 17.753"><path d="M17.746,10l-6.759,6.646L4.228,10a3.325,3.325,0,0,1,0-4.771,3.559,3.559,0,0,1,4.957,0l.244.241L10.986,7l1.559-1.537.241-.239a3.56,3.56,0,0,1,4.96,0,3.331,3.331,0,0,1,0,4.771M19.3,3.642a5.78,5.78,0,0,0-8.071,0l-.244.242-.244-.242a5.778,5.778,0,0,0-8.07,0,5.544,5.544,0,0,0,0,7.936l8.314,8.175L19.3,11.578a5.547,5.547,0,0,0,0-7.936" transform="translate(-1 -2)"></path></svg></a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+
+
+    <div class="navbar2">
+    <!-- navbar version 2 .................... -->
+
+
+    <div class="navbar2_left">
+        <ul>
+        <input type="checkbox"  id="check">
+        <span class="menu">
+            <li><a href="">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Eat & Drink<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">What's on<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Plan your trip<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Deals & Offers<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Dubai Calender<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
+        </span>
+        <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
+        <li><a href=""><img src="/assets/dubai name in design.svg" alt="" class="img2"></a></li>
+    </ul>
+    </div>
+    <div class="navbar2_right">
+        <ul>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="icon-nav-bar s174epxq"><path fill="#0067b9" fill-rule="nonzero" d="M22.021 20.611l-4.83-4.83a8.51 8.51 0 1 0-1.41 1.41l4.83 4.83 1.41-1.41zm-18-10.09a6.5 6.5 0 1 1 6.5 6.5 6.51 6.51 0 0 1-6.5-6.5z"></path></svg></a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="icon-nav-bar s1cxr9xh"><path d="M20,4H18V2H16V4H8V2H6V4H4A2,2,0,0,0,2,6V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V6A2,2,0,0,0,20,4Zm0,16H4V12H20Zm0-10H4V6H6V8H8V6h8V8h2V6h2Z" transform="translate(-2 -2)"></path></svg></a></li>
+            <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18" class="fav-heart icon-nav-bar sq69x8x"><svg xmlns="http://www.w3.org/2000/svg" width="19.972" height="17.753" viewBox="0 0 19.972 17.753"><path d="M17.746,10l-6.759,6.646L4.228,10a3.325,3.325,0,0,1,0-4.771,3.559,3.559,0,0,1,4.957,0l.244.241L10.986,7l1.559-1.537.241-.239a3.56,3.56,0,0,1,4.96,0,3.331,3.331,0,0,1,0,4.771M19.3,3.642a5.78,5.78,0,0,0-8.071,0l-.244.242-.244-.242a5.778,5.778,0,0,0-8.07,0,5.544,5.544,0,0,0,0,7.936l8.314,8.175L19.3,11.578a5.547,5.547,0,0,0,0-7.936" transform="translate(-1 -2)"></path></svg></svg></a></li>
+            <li>
+                <button>AA+</button>
+            </li>
+        </ul>
+    </div>
+</div>
+</nav>
     <div class="main-container">
         <section class="privacy">
             <h1>Privacy Notice</h1>
@@ -166,28 +261,28 @@
             <div class="column">
               <h3>Popular Links</h3>
               <ul>
-                <li><a href="/Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai</a></li>
-                <li><a href="https://www.visitdubai.com/en/things-to-do">Things's to do</a></li>
-                <li><a href="https://www.visitdubai.com/en/whats-on">What's on</a></li>
-                <li><a href="https://www.visitdubai.com/en/articles">Articles</a></li>
-                <li><a href="https://www.visitdubai.com/en/places-to-visit">Places to visit</a></li>
+                <li><a href="../Explore-dubai/Explore-dubai.html">Explore Dubai</a></li>
+                <li><a href="../Things-to-do/Things.html">Things's to do</a></li>
+                <li><a href="">What's on</a></li>
+                <li><a href="">Articles</a></li>
+                <li><a href="">Places to visit</a></li>
               </ul>
             </div>
             <div class="column">
               <h3>Helpful Information</h3>
               <ul>
-                <li><a href="https://www.visitdubai.com/en/plan-your-trip">Plan Your trip</a></li>
-                <li><a href="https://www.visitdubai.com/en/plan-your-trip/visa-information">Visa guide</a></li>
-                <li><a href="https://www.visitdubai.com/en/contact-us">Contact us</a></li>
-                <li><a href="https://www.visitdubai.com/en/faqs">Frequently Asked</a></li>
-                <li><a href="https://www.visitdubai.com/en/coronavirus-advisory">COVID-19 Advisory</a></li>
+                <li><a href="">Plan Your trip</a></li>
+                <li><a href="">Visa guide</a></li>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">Frequently Asked</a></li>
+                <li><a href="../Covid-19/Covid-19.html">COVID-19 Advisory</a></li>
               </ul>
             </div>
             <div class="column">
               <h3>Related sites</h3>
               <ul>
-                <li><a href="https://www.investindubai.gov.ae/en/">Invest in dubai</a></li>
-                <li><a href="https://www.dubaidet.gov.ae/en/">Department of Econnomy and Tourism</a></li>
+                <li><a href="">Invest in dubai</a></li>
+                <li><a href="">Department of Econnomy and Tourism</a></li>
               </ul>
             </div>
             <div class="column">
@@ -204,8 +299,8 @@
             <div class="header-container">
               <div class="header-left">
                 <nav>
-                  <a href="Jeet-links/terms/terms.html">Terms of use</a> 
-                  <a href="Jeet-links/privacy/privacy.html">Privacy Notice</a> 
+                  <a href="../terms/terms.html">Terms of use</a> 
+                  <a href="../privacy/privacy.html">Privacy Notice</a> 
                   <a href="#">Cookie notice</a> 
                   <a href="#">Sitemap</a> 
                 
