Alligned the code for presentation

--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visit Dubai - Official Tourism Board in Dubai</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<<<<<<< HEAD
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-=======
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
->>>>>>> 02f6c603ac82439e818cbb36d43cc6f82ff8186e
 </head>
 <body>
     <!-- up-button by Yash -->
@@ -66,25 +60,14 @@
         <div class="label_div">
             <div class="label_div_leftpart">
                 <ul>
-<<<<<<< HEAD
-                    <li><a href=""><img src="/assets/dubai name in design.svg" alt="" class="img1"></a></li>
-                    <li><a href="./Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="./Jeet-links/Things-to-do/Things.html">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Eat & Drink<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">What's on<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Plan your trip<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Deals & Offers<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Dubai Calender<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-=======
                     <li><a href=""><img src="assets/dubai name in design.svg" alt="" class="img1"></a></li>
-                    <li><a href="">Explore Dubai<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Things to do<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="./Jeet-links/Things-to-do/Things.html">Things to do<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="./Yash-Links/food.html">Eat & Drink<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="./Yash-Links/spas.html">What's on<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="./Yash-Links/hotels.html">Plan your trip<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="./Yash-Links/adventure.html">Deals & Offers<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                     <li><a href="./Yash-Links/live-show.html">Dubai Calender<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
->>>>>>> 02f6c603ac82439e818cbb36d43cc6f82ff8186e
                 </ul>
             </div>
             <div class="label_div_rightpart">
@@ -166,13 +149,8 @@
                     </button>
                 </div>
             </div>
-<<<<<<< HEAD
-            <div class="cards-container-1">
-                <div class="cards-1 ">
-=======
             <div class="cards-container-1" data-aos="fade-up" data-aos-duration="500">
                 <div class="cards-1" data-aos="fade-up" data-aos-duration="500">
->>>>>>> 02f6c603ac82439e818cbb36d43cc6f82ff8186e
                     <div class="image-1">
                         <img src="./Yash-Assets/live-show.59&cw=500&ch=375" alt="live-show">
                     </div>
@@ -244,7 +222,7 @@
                 <div class="text-2">
                     <h4>SIGHTS & ATTRACTIONS</h4>
                     <div class="paras-1">
-                        <a href="/">24 hours in Downtown Dubai</a>
+                        <a href="./Jeet-links/Explore-dubai/Explore-dubai.html">24 hours in Downtown Dubai</a>
                         <p>Enjoy an action-packed day in Dubai's 'centre of now' and discover incredible restaurants,
                             attractions, spas, shows and much more.</p>
                     </div>
